also test if the test changes

--- a/.github/workflows/test-hclq.yml
+++ b/.github/workflows/test-hclq.yml
@@ -4,6 +4,7 @@ on:
   push: 
     paths:
     - 'hclq/**'
+    - .github/workflows/test-hclq.yml
 jobs:
   test-hclq-build:
     runs-on: ubuntu-latest
