--- a/hclq/action.yml
+++ b/hclq/action.yml
@@ -3,7 +3,7 @@ description: runs [hclq](https://hclq.sh/)
 inputs:
   file_name:
     description: What file do you want to update
-  transform:
+  transformation:
     description: what transformation do you want.  e.g. set data.aws_vpc.vpc_id "vpc-xxx"
 runs:
   using: 'docker'
